--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "highlight.js": "^11.11.1",
+    "marked": "^15.0.7",
     "tailwindcss": "^4.0.6",
+    "vitepress": "^1.6.3",
     "vue": "^3.5.13",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
